# idf_build_get_property(target IDF_TARGET)

# set(src_dirs        .)
                    
# set(include_dirs    .)
                                            
# idf_component_register(SRCS ${srcs} 
# SRC_DIRS ${src_dirs} 
# INCLUDE_DIRS ${include_dirs})

# if(${IDF_TARGET} STREQUAL "esp32p4")
#     set_source_files_properties("ai.S" PROPERTIES COMPILE_OPTIONS "--specs;pie.specs")
# endif()

# component_compile_options(-ffast-math -O3)